2010-12-30  Onur Küçük <onur@pardus.org.tr>
	* bin/mudur.py: Add HU and RU locales.

2010-09-14  Ozan Çağlayan <ozan@pardus.org.tr>
	* bin/mudur.py: Switch from sysklogd to rsyslog.

2010-07-08  Ozan Çağlayan <ozan@pardus.org.tr>
	* bin/mudur.py: Drop support for COMAR based network management, start
	NetworkManager in start_network().

2010-06-08  Ozan Çağlayan <ozan@pardus.org.tr>
	* bin/mudur.py: Drop all deprecated and backward-compatibility stuff.
	* bin/mudur.py (start_udev): Drop copying of devices which is now handled
	by udev >= 155.
	* setup.py: Bump to 4.0 for 2011.

2010-04-09  Ozan Çağlayan <ozan@pardus.org.tr>
	* bin/mudur.py: pylint fixes

2010-03-16  Ozan Çağlayan <ozan@pardus.org.tr>
	* bin/service.py: Fix UI message when reloading a service.

2010-03-09  Ozan Çağlayan <ozan@pardus.org.tr>
	* bin/mudur.py (cleanupVar): Call the newly added function to prune pisi
	info files holding needsServiceRestart and needsReboot packages.
	* bin/mudur.py: Use delimitier-separated words for identifier names
	instead of CamelCase notation.
	* bin/mudur.py: Merge start_service and stop_service into manage_service.

2010-02-25  Ozan Çağlayan <ozan@pardus.org.tr>
	* bin/mudur.py: Move network-dependent code into startNetwork()

2010-01-26  Ozan Çağlayan <ozan@pardus.org.tr>
	* bin/mudur.py: Implement profiling support with cProfile,
	Don't mount /sys, /proc, /dev and /dev/pts if they're already mounted,
	Use /proc/sys/kernel/printk instead of dmesg for setting log level,
	Use os.chmod instead of forking chmod.
	* bin/setup.py: 3.1.4

2010-01-22  Ozan Çağlayan <ozan@pardus.org.tr>
	* bin/mudur.py: Check for /proc and /sys before mounting,
	refactor mounting parts a little.
	* bin/setup.py: Bump to 3.1.3

2010-01-14  Bahadır Kandemir <bahadir@pardus.org.tr>
	* bin/deluser.py: Add deluser command to easily delete users with COMAR

2010-01-14  Onur Küçük <onur@pardus.org.tr>
	* bin/adduser.py: Add adduser command to easily add users with COMAR
